--- a/game/public/css/main.css
+++ b/game/public/css/main.css
@@ -530,7 +530,7 @@ h2 {
   margin: 0 auto;
   display: grid;
   grid-display-rows: 1fr;
-  grid-template-columns: auto 300px auto;
+  grid-template-columns: 1fr 300px 1fr;
   grid-gap: 5px;
   padding-bottom: 40px; }
   .ViewLayout::-webkit-scrollbar {
@@ -540,7 +540,8 @@ h2 {
 
 .DatasetGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  grid-auto-flow: dense;
   grid-auto-rows: 100px;
   gap: 25px 10px; }
   .DatasetGrid-item {
